# pgcastor

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_CN.md  compile.md  make.sh  run_and_test.md
configsh/: configbin.sh  configcapture.sh  configdefault.sh  configmk.sh  configparser.sh  configtop.sh  configvar.sh
etc/: capture.cfg  collector.cfg  fastcmpcli.cfg  fastcmpsvr.cfg  integrate.cfg  license.lic  pump.cfg  receivewal.cfg  xmanager.cfg
etc/sample/: capture.cfg.sample  collector.cfg.sample  fastcmpcli.cfg.sample  fastcmpsvr.cfg.sample  integrate.cfg.sample  manager.cfg.sample  pump.cfg.sample  receivelog.cfg.sample
incl/: app_c.h  config.h  define.h  format.h  miscadmin.h  ripple_app_incl.h  ripple_c.h  ripple_config.h  ripple_define.h  ripple_miscadmin.h  ripple_version.h  sys_incl.h  version.h
incl/bigtransaction/: bigtxn.h  ripple_bigtxn.h
incl/cache/: cache_sysidcts.h  cache_txn.h  fpwcache.h  ripple_cache_sysidcts.h  ripple_fpwcache.h  ripple_toastcache.h  ripple_transcache.h  ripple_txn.h  toastcache.h  transcache.h  txn.h
incl/catalog/: attribute.h  authid.h  catalog.h  class.h  constraint.h  control.h  database.h  enum.h  index.h  namespace.h  operator.h  proc.h  range.h  relmapfile.h  ripple_attribute.h  ripple_authid.h  ripple_class.h  ripple_constraint.h  ripple_control.h  ripple_database.h  ripple_enum.h  ripple_index.h  ripple_namespace.h  ripple_operator.h  ripple_proc.h  ripple_range.h  ripple_type.h  type.h
incl/command/: cmd.h  cmd_startcapture.h  cmd_startintegrate.h  cmd_startxmanager.h  ripple_cmd_startcollector.h  ripple_cmd_startintegrate.h  ripple_cmd_startpump.h  ripple_cmd_startxmanager.h
incl/elog/: elog.h
incl/error/: error.h
incl/fastcompare/: ripple_fastcompare_beginchunk.h  ripple_fastcompare_beginslice.h  ripple_fastcompare_chunk.h  ripple_fastcompare_columndefine.h  ripple_fastcompare_columnvalue.h  ripple_fastcompare_datachunk.h  ripple_fastcompare_datacmpresult.h  ripple_fastcompare_datacmpresultitem.h  ripple_fastcompare_datacompare.h  ripple_fastcompare_dispatchmsg.h  ripple_fastcompare_endslice.h  ripple_fastcompare_row.h  ripple_fastcompare_simpledatachunk.h  ripple_fastcompare_simplerow.h  ripple_fastcompare_tablecomparecatalog.h  ripple_fastcompare_tablecorrectslice.h  ripple_fastcompare_tablescorrectmanager.h  ripple_fastcompare_tableslice.h  ripple_fastcompare_tableslicecorrectmanager.h  ripple_fastcompare_tableslicetask.h  ripple_fastcompare_tablesmanager.h
incl/filetransfer/: ripple_filetransfer.h  ripple_filetransfer_ftp.h
incl/loadrecords/: loadpage.h  loadpageam.h  loadpagefromfile.h  loadrecords.h  loadtrailrecords.h  loadwalrecords.h  record.h  ripple_loadpage.h  ripple_loadwalrecords.h  trailpage.h
incl/misc/: misc_control.h  misc_lockfiles.h  misc_stat.h  ripple_misc_stat.h
incl/net/: netclient.h  netpool.h  netserver.h  ripple_netclient.h  ripple_netserver.h
incl/onlinerefresh/: onlinerefresh_persist.h  ripple_onlinerefresh_persist.h
incl/queue/: queue.h
incl/rebuild/: rebuild.h  rebuild_burst.h  rebuild_preparestmt.h  ripple_rebuild_burst.h
incl/refresh/: refresh_table_sharding.h  refresh_table_syncstats.h  refresh_tables.h  ripple_refresh_table_sharding.h  ripple_refresh_table_syncstats.h  ripple_refresh_tables.h
incl/serial/: ripple_serial.h  serial.h
incl/signal/: app_signal.h  signal.h
incl/snapshot/: ripple_snapshot.h  snapshot.h
incl/stmts/: ripple_txnstmt_abandon.h  ripple_txnstmt_bigtxnbegin.h  ripple_txnstmt_burst.h  ripple_txnstmt_commit.h  ripple_txnstmt_onlinerefresh.h  ripple_txnstmt_onlinerefresh_dataset.h  ripple_txnstmt_prepared.h  ripple_txnstmt_refresh.h  ripple_txnstmt_reset.h  ripple_txnstmt_updatesynctable.h  txnstmt.h  txnstmt_abandon.h  txnstmt_bigtxnbegin.h  txnstmt_bigtxnend.h  txnstmt_burst.h  txnstmt_commit.h  txnstmt_ddl.h  txnstmt_dml.h  txnstmt_metadata.h  txnstmt_onlinerefresh.h  txnstmt_onlinerefresh_dataset.h  txnstmt_prepared.h  txnstmt_refresh.h  txnstmt_reset.h  txnstmt_shiftfile.h  txnstmt_updaterewind.h  txnstmt_updatesynctable.h
incl/storage/: ff_detail.h  ffsmgr.h  file_buffer.h  ripple_ffsmgr.h  ripple_file_buffer.h  ripple_smgr.h  smgr.h
incl/strategy/: filter_dataset.h  ripple_filter_dataset.h
incl/sync/: sync.h
incl/task/: ripple_task_slot.h  task_slot.h
incl/threads/: ripple_threads.h  threads.h
incl/translog/: ripple_translog_recvlogdb.h  translog_recvlogdb.h
incl/works/: ripple_workthreadmgr.h
incl/xmanager/: ripple_xmanager_auth.h  ripple_xmanager_metriccapturenode.h  ripple_xmanager_metriccollectornode.h  ripple_xmanager_metricmsgalter.h  ripple_xmanager_metricmsgcapturerefresh.h  ripple_xmanager_metricmsgconffile.h  ripple_xmanager_metricmsgcreate.h  ripple_xmanager_metricmsgdrop.h  ripple_xmanager_metricmsgedit.h  ripple_xmanager_metricmsginfo.h  ripple_xmanager_metricmsglist.h  ripple_xmanager_metricmsgstart.h  ripple_xmanager_metricpumpnode.h  ripple_xmanager_msg.h  xmanager.h  xmanager_auth.h  xmanager_listen.h  xmanager_metric.h  xmanager_metricasyncmsg.h  xmanager_metriccapturenode.h  xmanager_metricintegratenode.h  xmanager_metricmsg.h  xmanager_metricmsgalter.h  xmanager_metricmsgcapturerefresh.h  xmanager_metricmsgconffile.h  xmanager_metricmsgcreate.h  xmanager_metricmsgdrop.h  xmanager_metricmsgedit.h  xmanager_metricmsginfo.h  xmanager_metricmsginit.h  xmanager_metricmsglist.h  xmanager_metricmsgrefresh.h  xmanager_metricmsgremove.h  xmanager_metricmsgstart.h  xmanager_metricmsgstop.h  xmanager_metricmsgwatch.h  xmanager_metricnode.h  xmanager_metricprogressnode.h  xmanager_metricxscscinode.h  xmanager_msg.h
include/: app_incl.h  sys_incl.h
include/cache/: transcache.h
include/catalog/: catalog.h  control.h  enum.h
include/command/: cmd_startxmanager.h
include/loadrecords/: loadtrailrecords.h  trailpage.h
include/misc/: misc_control.c
include/net/: netpool.h
package/: package.sh
parser/: README.md
test/: .gitignore  Makefile  test_hash.c  test_list.c  test_parser.c  test_splitrecord.c  test_stringinfo.c
(+864 files in other folders)
